--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,11 @@
 VERSION=0.1.0
 DOMAIN=http://localhost:3000
 GA_ID=G-XXXXXXXXXX
+
+# Firebase
+NEXT_PUBLIC_FIREBASE_API_KEY=
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
+NEXT_PUBLIC_FIREBASE_APP_ID=
