--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "@t3-oss/env-nextjs": "^0.10.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^12.7.0",
     "geist": "^1.3.0",
     "lucide-react": "^0.468.0",
     "next": "^15.0.1",
-    "next-auth": "5.0.0-beta.25",
+    "next-auth": "5.0.0-beta.30",
     "next-intl": "^3.26.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
